--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
             </tr>
             <tr>
                 <td>
+                    <!-- Just to put the other td under the Video tag -->
+                </td>
+                <td>
                     <a id='delete'>Delete</a>
                     <a id='previous' class='disabled'>Previous</a>
                     <a id='next' class='disabled'>Next</a>
